--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/row_rumours.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/row_rumours.xml
@@ -5,6 +5,34 @@
     android:orientation="vertical">
 
     <RelativeLayout
+        android:id="@+id/row_rumours_background_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
+        android:visibility="gone">
+
+        <android.support.v7.widget.AppCompatImageButton
+            android:id="@+id/row_rumours_swipe_share"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@null"
+            android:padding="@dimen/padding_16"
+            android:src="@drawable/ic_share"
+            android:tint="@color/colorPrimary"
+            android:visibility="gone"/>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/row_rumours_foreground_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/background_phone"
+        android:focusable="true"
+        android:orientation="vertical"
+        android:visibility="gone"/>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
