--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/row_rumours_big.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/row_rumours_big.xml
@@ -2,7 +2,41 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/padding_8"
+    android:layout_marginEnd="@dimen/padding_8"
+    android:layout_marginBottom="@dimen/padding_8">
+
+    <RelativeLayout
+        android:id="@+id/row_rumours_background_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/row_rumours_foreground_container"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/row_rumours_foreground_container"
+        android:background="@color/colorAccent"
+        android:visibility="gone">
+
+        <android.support.v7.widget.AppCompatImageButton
+            android:id="@+id/row_rumours_swipe_share"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@null"
+            android:padding="@dimen/padding_16"
+            android:src="@drawable/ic_share"
+            android:tint="@color/colorPrimary"
+            android:visibility="gone"/>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/row_rumours_foreground_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/background_phone"
+        android:focusable="true"
+        android:orientation="vertical"
+        android:visibility="gone"/>
 
     <RelativeLayout
         android:id="@+id/fragment_rumors_single_rumour"
