--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_edit_profile.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_edit_profile.xml
@@ -14,23 +14,24 @@
             android:id="@+id/close"
             android:layout_width="@dimen/popup_manage_chat_private_confirm_button_height"
             android:layout_height="@dimen/popup_manage_chat_private_confirm_button_height"
-            android:layout_marginEnd="@dimen/margin_10"
             android:layout_alignParentEnd="true"
-            android:src="?videoCloseButtonIcon"
-            android:layout_centerVertical="true"/>
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="@dimen/margin_10"
+            android:src="?videoCloseButtonIcon" />
 
-    <TextView
-        android:id="@+id/caption"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/standard_button_height"
-        android:gravity="center"
-        android:text="@string/edit_information"
-        android:textColor="?colorAccent" />
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/height_2"
-        android:layout_alignParentTop="true"
-        android:background="?colorAccent" />
+        <TextView
+            android:id="@+id/caption"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/standard_button_height"
+            android:gravity="center"
+            android:text="@string/edit_information"
+            android:textColor="?colorAccent" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_2"
+            android:layout_alignParentTop="true"
+            android:background="?colorAccent" />
 
     </RelativeLayout>
 
@@ -48,202 +49,205 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/top_split_line">
 
-    <RelativeLayout
-        android:layout_centerVertical="true"
-        android:layout_marginStart="@dimen/margin_40"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/edit_photo_caption"
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:layout_alignStart="@+id/profile_image"
-            android:layout_alignEnd="@+id/profile_image"
-            android:textColor="?white_semitransparent"
-            android:text="@string/edit_photo"/>
+            android:layout_centerVertical="true"
+            android:layout_marginStart="@dimen/margin_40">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/profile_image"
-            android:layout_width="@dimen/width_80"
-            android:layout_marginTop="@dimen/margin_8"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/margin_8"
-            android:src="?profileImageIcon"
-            android:layout_below="@+id/edit_photo_caption"
-            android:layout_marginEnd="@dimen/coin_lateral_margin"
-            android:layout_height="@dimen/height_80" />
+            <TextView
+                android:id="@+id/edit_photo_caption"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/profile_image"
+                android:layout_alignStart="@+id/profile_image"
+                android:gravity="center_horizontal"
+                android:text="@string/edit_photo"
+                android:textColor="?white_semitransparent" />
 
-        <Button
-            android:id="@+id/camera_button"
-            android:layout_width="@dimen/standard_button_height"
-            android:layout_below="@+id/profile_image"
-            android:layout_height="@dimen/standard_button_height"
-            android:layout_toStartOf="@+id/center_of_profile_image"
-            android:background="@drawable/button_camera" />
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/profile_image"
+                android:layout_width="@dimen/width_80"
+                android:layout_height="@dimen/height_80"
+                android:layout_below="@+id/edit_photo_caption"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="@dimen/margin_8"
+                android:layout_marginEnd="@dimen/coin_lateral_margin"
+                android:layout_marginTop="@dimen/margin_8"
+                android:src="?profileImageIcon" />
+
+            <Button
+                android:id="@+id/camera_button"
+                android:layout_width="@dimen/standard_button_height"
+                android:layout_height="@dimen/standard_button_height"
+                android:layout_below="@+id/profile_image"
+                android:layout_toStartOf="@+id/center_of_profile_image"
+                android:background="@drawable/button_camera" />
+
+            <View
+                android:id="@+id/center_of_profile_image"
+                android:layout_width="@dimen/space_0"
+                android:layout_height="@dimen/space_0"
+                android:layout_centerInParent="true" />
+
+            <Button
+                android:id="@+id/picture_button"
+                android:layout_width="@dimen/standard_button_height"
+                android:layout_height="@dimen/standard_button_height"
+                android:layout_below="@+id/profile_image"
+                android:layout_toEndOf="@+id/center_of_profile_image"
+                android:background="@drawable/button_image" />
+        </RelativeLayout>
+
         <View
-            android:id="@+id/center_of_profile_image"
+            android:id="@+id/center"
             android:layout_width="@dimen/space_0"
             android:layout_height="@dimen/space_0"
-            android:layout_centerInParent="true"/>
-        <Button
-            android:id="@+id/picture_button"
-            android:layout_below="@+id/profile_image"
-            android:layout_width="@dimen/standard_button_height"
-            android:layout_height="@dimen/standard_button_height"
-            android:layout_toEndOf="@+id/center_of_profile_image"
-            android:background="@drawable/button_image" />
-    </RelativeLayout>
+            android:layout_centerInParent="true" />
 
-    <View
-        android:id="@+id/center"
-        android:layout_width="@dimen/space_0"
-        android:layout_height="@dimen/space_0"
-        android:layout_centerInParent="true"/>
+        <TextView
+            android:id="@+id/first_name_caption"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/margin_10"
+            android:layout_marginTop="@dimen/margin_20"
+            android:layout_toStartOf="@+id/center"
+            android:text="@string/first_name"
+            android:textColor="?white_semitransparent" />
 
-    <TextView
-        android:id="@+id/first_name_caption"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toStartOf="@+id/center"
-        android:textColor="?white_semitransparent"
-        android:layout_marginTop="@dimen/margin_20"
-        android:layout_marginBottom="@dimen/margin_10"
-        android:text="@string/first_name"/>
+        <TextView
+            android:id="@+id/last_name_caption"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/first_name_caption"
+            android:layout_marginBottom="@dimen/margin_10"
+            android:layout_marginTop="@dimen/margin_20"
+            android:layout_toStartOf="@+id/center"
+            android:text="@string/last_name"
+            android:textColor="?white_semitransparent" />
 
-    <TextView
-        android:id="@+id/last_name_caption"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toStartOf="@+id/center"
-        android:layout_marginTop="@dimen/margin_20"
-        android:layout_below="@+id/first_name_caption"
-        android:layout_marginBottom="@dimen/margin_10"
-        android:textColor="?white_semitransparent"
-        android:text="@string/last_name"/>
+        <TextView
+            android:id="@+id/nickname_caption"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/last_name_caption"
+            android:layout_marginBottom="@dimen/margin_10"
+            android:layout_marginTop="@dimen/margin_20"
+            android:layout_toStartOf="@+id/center"
+            android:text="@string/nickname"
+            android:textColor="?white_semitransparent" />
 
-    <TextView
-        android:id="@+id/nickname_caption"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toStartOf="@+id/center"
-        android:layout_marginTop="@dimen/margin_20"
-        android:layout_below="@+id/last_name_caption"
-        android:layout_marginBottom="@dimen/margin_10"
-        android:textColor="?white_semitransparent"
-        android:text="@string/nickname"/>
+        <TextView
+            android:id="@+id/email_caption"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/nickname_caption"
+            android:layout_marginBottom="@dimen/margin_10"
+            android:layout_marginTop="@dimen/margin_20"
+            android:layout_toStartOf="@+id/center"
+            android:text="@string/email_address"
+            android:textColor="?white_semitransparent" />
 
-    <TextView
-        android:id="@+id/email_caption"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toStartOf="@+id/center"
-        android:layout_marginTop="@dimen/margin_20"
-        android:layout_below="@+id/nickname_caption"
-        android:layout_marginBottom="@dimen/margin_10"
-        android:textColor="?white_semitransparent"
-        android:text="@string/email_address"/>
-    <TextView
-        android:id="@+id/telephone_caption"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toStartOf="@+id/center"
-        android:layout_marginTop="@dimen/margin_20"
-        android:layout_below="@+id/email_caption"
-        android:layout_marginBottom="@dimen/margin_10"
-        android:textColor="?white_semitransparent"
-        android:text="@string/telephone_no"/>
+        <TextView
+            android:id="@+id/telephone_caption"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/email_caption"
+            android:layout_marginBottom="@dimen/margin_10"
+            android:layout_marginTop="@dimen/margin_20"
+            android:layout_toStartOf="@+id/center"
+            android:text="@string/telephone_no"
+            android:textColor="?white_semitransparent" />
 
-    <AutoCompleteTextView
-        android:id="@+id/first_name_edit_text"
-        android:layout_alignBaseline="@+id/first_name_caption"
-        android:labelFor="@+id/first_name_caption"
-        android:layout_toEndOf="@+id/center"
-        android:textSize="@dimen/font_size_12"
-        android:layout_width="match_parent"
-        android:nextFocusForward="@+id/last_name_edit_text"
-        android:lines="1"
-        android:layout_marginEnd="@dimen/margin_20"
-        android:layout_marginStart="@dimen/margin_10"
-        android:textColor="@color/white"
-        android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:inputType="textPersonName"
-        android:nextFocusDown="@+id/last_name_edit_text"
-        android:imeOptions="actionNext"/>
+        <AutoCompleteTextView
+            android:id="@+id/first_name_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/first_name_caption"
+            android:layout_marginEnd="@dimen/margin_20"
+            android:layout_marginStart="@dimen/margin_10"
+            android:layout_toEndOf="@+id/center"
+            android:imeOptions="actionNext"
+            android:inputType="textPersonName"
+            android:labelFor="@+id/first_name_caption"
+            android:lines="1"
+            android:maxLines="1"
+            android:nextFocusDown="@+id/last_name_edit_text"
+            android:nextFocusForward="@+id/last_name_edit_text"
+            android:textColor="@color/white"
+            android:textSize="@dimen/font_size_12" />
 
 
-    <AutoCompleteTextView
-        android:id="@+id/last_name_edit_text"
-        android:layout_alignBaseline="@+id/last_name_caption"
-        android:labelFor="@+id/last_name_caption"
-        android:nextFocusForward="@+id/nickname_edit_text"
-        android:textSize="@dimen/font_size_12"
-        android:layout_toEndOf="@+id/center"
-        android:layout_width="match_parent"
-        android:lines="1"
-        android:layout_marginEnd="@dimen/margin_20"
-        android:layout_marginStart="@dimen/margin_10"
-        android:textColor="@color/white"
-        android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:inputType="textPersonName"
-        android:nextFocusDown="@+id/nickname_edit_text"
-        android:imeOptions="actionNext"/>
+        <AutoCompleteTextView
+            android:id="@+id/last_name_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/last_name_caption"
+            android:layout_marginEnd="@dimen/margin_20"
+            android:layout_marginStart="@dimen/margin_10"
+            android:layout_toEndOf="@+id/center"
+            android:imeOptions="actionNext"
+            android:inputType="textPersonName"
+            android:labelFor="@+id/last_name_caption"
+            android:lines="1"
+            android:maxLines="1"
+            android:nextFocusDown="@+id/nickname_edit_text"
+            android:nextFocusForward="@+id/nickname_edit_text"
+            android:textColor="@color/white"
+            android:textSize="@dimen/font_size_12" />
 
-    <AutoCompleteTextView
-        android:id="@+id/nickname_edit_text"
-        android:layout_alignBaseline="@+id/nickname_caption"
-        android:labelFor="@+id/nickname_caption"
-        android:layout_toEndOf="@+id/center"
-        android:lines="1"
-        android:nextFocusForward="@+id/email_edit_text"
-        android:layout_width="match_parent"
-        android:layout_marginEnd="@dimen/margin_20"
-        android:layout_marginStart="@dimen/margin_10"
-        android:textSize="@dimen/font_size_12"
-        android:textColor="@color/white"
-        android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:inputType="text"
-        android:nextFocusDown="@+id/email_edit_text"
-        android:imeOptions="actionNext"/>
+        <AutoCompleteTextView
+            android:id="@+id/nickname_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/nickname_caption"
+            android:layout_marginEnd="@dimen/margin_20"
+            android:layout_marginStart="@dimen/margin_10"
+            android:layout_toEndOf="@+id/center"
+            android:imeOptions="actionNext"
+            android:inputType="text"
+            android:labelFor="@+id/nickname_caption"
+            android:lines="1"
+            android:maxLines="1"
+            android:nextFocusDown="@+id/email_edit_text"
+            android:nextFocusForward="@+id/email_edit_text"
+            android:textColor="@color/white"
+            android:textSize="@dimen/font_size_12" />
 
-    <AutoCompleteTextView
-        android:id="@+id/email_edit_text"
-        android:layout_alignBaseline="@+id/email_caption"
-        android:lines="1"
-        android:labelFor="@+id/email_caption"
-        android:nextFocusForward="@+id/telephone_edit_text"
-        android:layout_toEndOf="@+id/center"
-        android:layout_width="match_parent"
-        android:layout_marginEnd="@dimen/margin_20"
-        android:layout_marginStart="@dimen/margin_10"
-        android:textSize="@dimen/font_size_12"
-        android:textColor="@color/white"
-        android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:inputType="textEmailAddress"
-        android:nextFocusDown="@+id/telephone_edit_text"
-        android:imeOptions="actionNext"/>
+        <AutoCompleteTextView
+            android:id="@+id/email_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/email_caption"
+            android:layout_marginEnd="@dimen/margin_20"
+            android:layout_marginStart="@dimen/margin_10"
+            android:layout_toEndOf="@+id/center"
+            android:imeOptions="actionNext"
+            android:inputType="textEmailAddress"
+            android:labelFor="@+id/email_caption"
+            android:lines="1"
+            android:maxLines="1"
+            android:nextFocusDown="@+id/telephone_edit_text"
+            android:nextFocusForward="@+id/telephone_edit_text"
+            android:textColor="@color/white"
+            android:textSize="@dimen/font_size_12" />
 
-    <AutoCompleteTextView
-        android:id="@+id/telephone_edit_text"
-        android:layout_alignBaseline="@+id/telephone_caption"
-        android:nextFocusForward="@+id/confirm_button"
-        android:labelFor="@+id/telephone_caption"
-        android:layout_toEndOf="@+id/center"
-        android:layout_width="match_parent"
-        android:layout_marginEnd="@dimen/margin_20"
-        android:lines="1"
-        android:layout_marginStart="@dimen/margin_10"
-        android:textColor="@color/white"
-        android:textSize="@dimen/font_size_12"
-        android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:inputType="phone"
-        android:imeOptions="actionDone"/>
+        <AutoCompleteTextView
+            android:id="@+id/telephone_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/telephone_caption"
+            android:layout_marginEnd="@dimen/margin_20"
+            android:layout_marginStart="@dimen/margin_10"
+            android:layout_toEndOf="@+id/center"
+            android:imeOptions="actionDone"
+            android:inputType="phone"
+            android:labelFor="@+id/telephone_caption"
+            android:lines="1"
+            android:maxLines="1"
+            android:nextFocusForward="@+id/confirm_button"
+            android:textColor="@color/white"
+            android:textSize="@dimen/font_size_12" />
 
     </RelativeLayout>
     <!-- BOTTOM BUTTONS CONTAINER -->
