--- a/SportsSideKick/app/src/main/res/layout/wall_item_user_post.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_user_post.xml
@@ -8,7 +8,7 @@
 
     <View
         android:id="@+id/strip"
-        android:layout_width="@dimen/width_5"
+        android:layout_width="@dimen/width_6"
         android:layout_height="@dimen/width_5"
         android:layout_alignBottom="@+id/likes_and_comments"
         android:layout_alignParentTop="true"
@@ -145,4 +145,10 @@
                 android:textSize="@dimen/font_size_10" />
         </LinearLayout>
     </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/height_2"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/wall_item_shadow" />
 </RelativeLayout>
