--- a/SportsSideKick/app/src/main/res/values/dimens.xml
+++ b/SportsSideKick/app/src/main/res/values/dimens.xml
@@ -13,7 +13,7 @@
     <dimen name="margin_10">10dp</dimen>
     <dimen name="margin_20">20dp</dimen>
     <dimen name="margin_25">25dp</dimen>
-    <dimen name="margin_5">5dp</dimen>
+    <dimen name="margin_5">6dp</dimen>
     <dimen name="margin_15">15dp</dimen>
     <dimen name="margin_60">60dp</dimen>
     <dimen name="margin_70">70dp</dimen>
@@ -196,6 +196,7 @@
     <dimen name="margin_negative_100">-100dp</dimen>
     <dimen name="height_55">55dp</dimen>
     <dimen name="width_5">5dp</dimen>
+    <dimen name="width_6">6dp</dimen>
 
     <dimen name="padding_13">13dp</dimen>
     <dimen name="padding_12">12dp</dimen>
