--- a/SportsSideKick/app/src/main/res/layout/next_match_view.xml
+++ b/SportsSideKick/app/src/main/res/layout/next_match_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/nextMatchOverlay"
-    tools:background="@color/colorPrimarySlightlyLight">
+    android:background="@color/colorPrimarySlightlyLight">
 
     <ImageView
         android:layout_width="match_parent"
